tests/ui/const-generics/issue-46511.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-46511.rs:5:35
   |
LL |     _a: [u8; std::mem::size_of::<&'a mut u8>()]
   |                                   ^^ cannot perform const operation using `'a`
   |
   = note: lifetime parameters may not be used in const expressions
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error[E0392]: lifetime parameter `'a` is never used
  --> $DIR/issue-46511.rs:3:12
   |
LL | struct Foo<'a>
   |            ^^ unused lifetime parameter
   |
   = help: consider removing `'a`, referring to it in a field, or using a marker such as `PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
